--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
    "version": "3.0.0",
    "description": "Provides a console for debugging Vendetta over a websocket.",
    "type": "module",
-   "author": "Meqativ",
+   "author": "meqativ",
    "license": "MIT",
    "dependencies": {
       "ansi-colors": "^4.1.3",
-      "ws": "^8.13.0"
-   },
-   "optionalDependencies": {
+      "ws": "^8.13.0",
       "command-line-usage": "^7.0.1"
    }
 }
